--- a/dev-application.yaml
+++ b/dev-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/rslim087a/argocd-kubernetes-gitops-tutorial.git
+    repoURL: https://github.com/kohyuk91/argo-test.git
     targetRevision: HEAD
     path: overlays/dev
   destination:
