--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -16,4 +16,6 @@ nameSuffix: "-v1"
 
 configMapGenerator:
 - name: mykustom-map
-  env: config.properties
+  behavior: replace
+  envs:
+    - config.properties
