--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -11,4 +11,6 @@ patches:
 
 configMapGenerator:
 - name: mykustom-map
-  env: config.properties
+  behavior: replace
+  envs:
+  - config.properties
