--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   replicas: 1
   template:
-    spec: # Pod spec
+    spec:
       containers:
       - name: mycontainer
         image: "devopsjourney1/mywebapp:latest"
@@ -18,7 +18,7 @@ spec:
         resources:
           requests:
             memory: "16Mi" 
-            cpu: "50m"    # 500milliCPUs (1/2 CPU)
+            cpu: "50m"
           limits:
             memory: "128Mi"
             cpu: "100m"
